--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -251,4 +251,4 @@
     <string name="system_locale_summary">In caso di disattivazione, l\'applicazione utilizza l\'impostazione corrispondente alla lingua impostata per l\'applicazione.</string>
     <string name="raised">Attivato</string>
     <string name="scheduled">Pianificato</string>
-</resources>
+<string name="no_calendar_app">Nessuna applicazione calendario trovata</string></resources>
