--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -246,4 +246,4 @@
     <string name="system_locale_summary">Hvis slået fra, bruger appen den indstilling, der svarer til det sprog, der er indstillet for appen.</string>
     <string name="raised">Udløst</string>
     <string name="scheduled">Planlagt</string>
-</resources>
+<string name="no_calendar_app">Ingen kalender-app fundet</string></resources>
