--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="period_end">Koniec okresu</string>
     <string name="tab_overview">Przegląd</string>
@@ -256,4 +256,4 @@
     <string name="system_locale_summary">Jeśli wyłączone, aplikacja korzysta z ustawienia odpowiadającego językowi ustawionemu dla aplikacji.</string>
     <string name="raised">Uruchomiono</string>
     <string name="scheduled">Zaplanowano</string>
-</resources>
+<string name="no_calendar_app">Nie znaleziono aplikacji kalendarza</string></resources>
