--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -266,4 +266,4 @@
     <string name="system_locale_summary">عند إيقاف تشغيله، يستخدم التطبيق الإعداد المطابق للغة التي تم تعيينها للتطبيق.</string>
     <string name="raised">تم الرفع</string>
     <string name="scheduled">مجدول</string>
-<string name="no_calendar_app">لم يتم العثور على تطبيق تقويم</string></resources>
+<string name="no_calendar_app">لم يتم العثور على تطبيق تقويم</string><string name="combine_notifications">الجمع بين الإشعارات في نفس الوقت</string><string name="combine_notifications_summary">في حالة تعيينها، يتم دمج الإشعارات التي لها نفس الوقت في إشعار واحد</string></resources>
