--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -246,4 +246,4 @@
     <string name="system_locale_summary">Wenn ausgeschaltet verwendet die App die Einstellung, die der für die App eingestellten Sprache entspricht.</string>
     <string name="raised">Ausgelöst</string>
     <string name="scheduled">Geplant</string>
-<string name="no_calendar_app">Keine Kalender-App gefunden</string></resources>
+<string name="no_calendar_app">Keine Kalender-App gefunden</string><string name="combine_notifications">Gleichzeitige Benachrichtigungen zusammenfassen</string><string name="combine_notifications_summary">Wenn diese Option aktiviert ist, werden Benachrichtigungen mit derselben Uhrzeit zu einer einzigen Benachrichtigung zusammengefasst</string></resources>
