--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -251,4 +251,4 @@
     <string name="system_locale_summary">En cas de désactivation, l\'application utilise le paramètre correspondant à la langue définie pour l\'application.</string>
     <string name="raised">Déclenchée</string>
     <string name="scheduled">Planifiée</string>
-<string name="no_calendar_app">Aucune application de calendrier trouvée</string></resources>
+<string name="no_calendar_app">Aucune application de calendrier trouvée</string><string name="combine_notifications">Combiner les notifications simultanées</string><string name="combine_notifications_summary">Si cette option est activée, les notifications ayant la même heure sont combinées en une seule notification</string></resources>
