--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -251,4 +251,4 @@
     <string name="system_locale_summary">In caso di disattivazione, l\'applicazione utilizza l\'impostazione corrispondente alla lingua impostata per l\'applicazione.</string>
     <string name="raised">Attivato</string>
     <string name="scheduled">Pianificato</string>
-<string name="no_calendar_app">Nessuna applicazione calendario trovata</string></resources>
+<string name="no_calendar_app">Nessuna applicazione calendario trovata</string><string name="combine_notifications">Combinare le notifiche nello stesso momento</string><string name="combine_notifications_summary">Se impostata, le notifiche con la stessa ora vengono combinate in un&amp;apos;unica notifica</string></resources>
