--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -256,4 +256,4 @@
     <string name="system_locale_summary">Jeśli wyłączone, aplikacja korzysta z ustawienia odpowiadającego językowi ustawionemu dla aplikacji.</string>
     <string name="raised">Uruchomiono</string>
     <string name="scheduled">Zaplanowano</string>
-<string name="no_calendar_app">Nie znaleziono aplikacji kalendarza</string></resources>
+<string name="no_calendar_app">Nie znaleziono aplikacji kalendarza</string><string name="combine_notifications">Łączenie powiadomień w tym samym czasie</string><string name="combine_notifications_summary">Jeśli jest ustawiona, powiadomienia o tym samym czasie są łączone w jedno powiadomienie</string></resources>
