--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -251,4 +251,4 @@
     <string name="system_locale_summary">Quando desativado, o aplicativo usará a configuração correspondente ao idioma definido para o aplicativo.</string>
     <string name="raised">Acionado</string>
     <string name="scheduled">Agendado</string>
-<string name="no_calendar_app">Nenhum aplicativo de calendário encontrado</string></resources>
+<string name="no_calendar_app">Nenhum aplicativo de calendário encontrado</string><string name="combine_notifications">Combinar notificações de mesmo horário</string><string name="combine_notifications_summary">Se definido, as notificações com o mesmo horário serão combinadas em uma única notificação</string></resources>
