--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -256,4 +256,4 @@
     <string name="system_locale_summary">У вимкненому стані програма використовує налаштування, що відповідають мові, встановленій для програми.</string>
     <string name="raised">Спрацював</string>
     <string name="scheduled">Заплановано</string>
-<string name="no_calendar_app">Не знайдено жодного додатку календаря</string></resources>
+<string name="no_calendar_app">Не знайдено жодного додатку календаря</string><string name="combine_notifications">Об&amp;apos;єднати одночасні сповіщення</string><string name="combine_notifications_summary">Якщо встановлено, сповіщення з однаковим часом об&amp;apos;єднуються в одне сповіщення</string></resources>
